# nickl

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENCE  LICENSE  README.md  ReleaseNotes.txt  build.sh  config.nkl.in  default.xml  foo.nkl  manifest  struct.json
ext/common/: CMakeLists.txt
ext/common/src/: arena.cpp  file_utils.cpp  id.cpp  logger.cpp  mem.cpp  utils.cpp
ext/common/test/: CMakeLists.txt  array_test.cpp  hashmap_test.cpp  logger_test.cpp  mem_test.cpp  sequence_test.cpp  utils_test.cpp
ext/vm/: CMakeLists.txt
ext/vm/src/: bc.cpp  c_compiler.cpp  interp.cpp  ir.cpp  native_adapter.cpp  native_fn_adapter.cpp  so_adapter.cpp  value.cpp  vm.cpp
ext/vm/test/: CMakeLists.txt  bc_test.cpp  c_compiler_test.cpp  interp_test.cpp  ir_test.cpp  translate_to_c_test.cpp  value_test.cpp  vm_test.cpp
old_src/lang/: CMakeLists.txt
old_src/lang/src/: ast.cpp  main.cpp  parser.cpp  value.cpp
old_src/lang/test/: CMakeLists.txt  parser_test.cpp  value_test.cpp
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt
src/common/src/: allocator.c  allocator.cpp  arena.c  arena.cpp  ast.c  ast.cpp  block_allocator.c  block_allocator.cpp  config.c  config.cpp  diagnostics.c  diagnostics.cpp  dynamic_string_builder.cpp  file.c  file.cpp  file_utils.cpp  id.cpp  logger.c  logger.cpp  mem.c  mem.cpp  pipe_stream.c  stack_allocator.c  stack_allocator.cpp  static_allocator.cpp  static_string_builder.cpp  stream.c  string.c  string.cpp  string_builder.c  string_builder.cpp  string_builder_base.cpp  utils.c  utils.cpp
src/common/test/: CMakeLists.txt  allocator_test.cpp  arena_test.cpp  array_test.cpp  dynamic_string_builder_test.cpp  file_utils_test.cpp  hash_map_test.cpp  hash_set_test.cpp  hashmap_test.cpp  hashset_test.cpp  id_test.cpp  log2arena_test.cpp  log_array_test.cpp  logger_test.cpp  mem_test.cpp  slice_test.cpp  stack_allocator_test.cpp  static_allocator_test.cpp  static_string_builder_test.cpp  string_builder_test.cpp  utils_test.cpp
src/config/: CMakeLists.txt  config.nkl.in  preload.nkl
src/core/: CMakeLists.txt
src/core/src/: ast.cpp  compiler.cpp  core.cpp  id.cpp  lexer.cpp  main.cpp  parser.cpp  token.cpp  value.cpp
src/core/test/: CMakeLists.txt  ast_test.cpp  compiler_test.cpp  id_test.cpp  lexer_test.cpp  parser_test.cpp  value_test.cpp
src/corelib/: json.nkl  json.nkl.in  libc.nkl  libc.nkl.in  pthread.nkl  raylib.nkl
src/lang/: CMakeLists.txt
src/lang/src/: ast.cpp  ast_impl.h  compiler.cpp  compiler_old.cpp  entry.cpp  lang.cpp  lexer.cpp  lexer.hpp  main.cpp  main.h  nodes.inl  parser.cpp  parser.hpp  token.hpp  tokens.cpp  tokens.inl  types.cpp  value.cpp
src/lang/test/: CMakeLists.txt  ast_test.cpp  compiler_ast_test.cpp  compiler_src_test.cpp  compiler_test.cpp  lexer_test.cpp  parser_test.cpp  value_test.cpp
src/libcore/: CMakeLists.txt  compiler.nkl  json.nkl.in  libc.nkl.in  pthread.nkl.in
src/new_common/: CMakeLists.txt
src/new_common/src/: allocator.c  allocator.cpp  id.cpp  logger.c  string.cpp  string_builder.c  string_builder.cpp
src/new_common/test/: CMakeLists.txt  allocator_test.cpp  id_test.cpp  string_builder_test.cpp
src/new_vm/: CMakeLists.txt
src/new_vm/src/: bytecode.cpp  bytecode.h  bytecode.inl  bytecode_impl.hpp  dl_adapter.cpp  interp.cpp  interp.hpp  ir.cpp  ir_impl.hpp  ir_internal.hpp  native_fn_adapter.cpp  native_fn_adapter.h  op.cpp  op.h  op_internal.hpp  value.cpp
src/new_vm/test/: CMakeLists.txt  ir_test.cpp
src/nkb/: CMakeLists.txt
src/nkb/src/: bytecode.cpp  bytecode.h  bytecode.hpp  bytecode.inl  cc_adapter.c  cc_adapter.h  common.cpp  ffi_adapter.cpp  ffi_adapter.h  ffi_adapter.hpp  interp.cpp  interp.h  interp.hpp  ir.cpp  ir_impl.h  ir_impl.hpp  irc.cpp  lexer.cpp  lexer.h  lexer.hpp  main.cpp  nkb.cpp  parser.cpp  parser.hpp  tokens.inl  translate2c.c  translate2c.cpp  translate2c.h  types.cpp  types.hpp
src/nkb/test/: CMakeLists.txt  aggregate.nkir  basic.nkl  cc_adapter_test.cpp  ffi_closure.nkir  global.nkir  hello_world.nkir  hello_world.nkl  ir_paste_test.cpp  loop.nkir  loop.nkl  paste_test.cpp  proc.nkir  proc.nkl  threads.nkir
src/nkb2/: CMakeLists.txt
src/nkb2/src/: common.c  common.h  emit_llvm.c  emit_llvm.h  ir.c  linker.c  linker.h  llvm.cpp  llvm.h  llvm_adapter.c  llvm_adapter.cpp  llvm_adapter.h  llvm_adapter_internal.h  llvm_emitter.c  llvm_emitter.h  llvm_stream.c  llvm_stream.h  types.c
src/nkirc/: CMakeLists.txt
src/nkirc/cmake/: NkircTest.cmake
src/nkirc/config/: CMakeLists.txt  nkirc.conf  nkirc.conf.in
src/nkirc/src/: ast.h  config.cpp  config.hpp  diagnostics.cpp  diagnostics.h  irc.cpp  irc.h  irc.hpp  irc_impl.hpp  lexer.cpp  lexer.h  lexer.hpp  main.cpp  parser.cpp  parser.h  parser.hpp  tokens.inl  types.cpp  types.h  types.hpp
src/nkirc/test/: CMakeLists.txt  aggregate.nkir  casts.nkir  compile_test.sh  extern_var.nkir  ffi_closure.nkir  global.nkir  hello_world.nkir  include.nkir  included.nkir  loop.nkir  proc.nkir  syscall.nkir  threads.nkir
src/nkl_common/src/: ast.c  config.c  diagnostics.c
src/nkl_core/: CMakeLists.txt
src/nkl_core/src/: compiler.cpp  compiler_api.c  compiler_state.cpp  compiler_state.h  compiler_state.hpp  nickl.c  nickl_impl.h  nodes.h  nodes.inl  search.cpp  types.c
src/nkl_core/test/: CMakeLists.txt  types_test.cpp
src/nkl_core2/: CMakeLists.txt
src/nkl_core2/etc/: exported-symbols.txt  exports.map
src/nkl_core2/src/: ast_parser.c  ast_parser.h  ast_tokens.h  hash_trees.c  hash_trees.h  ir_parser.c  ir_parser.h  ir_tokens.h  lexer.c  nickl.c  nickl_impl.c  nickl_impl.h
src/nkl_core2/test/: CMakeLists.txt  run_ir_test.cpp
src/nklc/: CMakeLists.txt
src/nklc/cmake/: NklcTest.cmake  compile_test.sh
src/nklc/src/: main.c
src/nklc/test/: CMakeLists.txt
src/nkstc/: CMakeLists.txt
src/ntk/: CMakeLists.txt
src/ntk/src/: id.c  (+20 more)
src/src/: ast.cpp  id.cpp  main.cpp  value.cpp
src/std/: compiler.nkl  json.nkl  libc.nkl  raylib.nkl
src/sys/: CMakeLists.txt
src/test/: CMakeLists.txt  ast_test.cpp  value_test.cpp
src/vm/: CMakeLists.txt
src/vmnew/: CMakeLists.txt
(+792 files in other folders)
