add_subdirectory(3rdparty/blake3)
add_subdirectory(3rdparty/spall)
add_subdirectory(3rdparty/stb)
add_subdirectory(config)
add_subdirectory(lang)
add_subdirectory(libcore)
add_subdirectory(nkb)
add_subdirectory(nkb2)
add_subdirectory(nkirc)
add_subdirectory(nkl_common)
add_subdirectory(nkl_core)
add_subdirectory(nkl_core2)
add_subdirectory(nklc)
add_subdirectory(nkstc)
add_subdirectory(ntk)
add_subdirectory(vm)
